--- a/Comp.html
+++ b/Comp.html
@@ -68,7 +68,7 @@
             </div>
             <div class="col-md-4">    
               <figure class="box-set "><img src="figures\1com_humid.png"  alt="Huidity"></figure>    
-              <p class="text-right">Humidity RH%(fig.B)</p>
+              <p class="text-right">Humidity (fig.B)</p>
             </div>
             
             <!--Second Row-->
@@ -77,7 +77,7 @@
             </div>
             <div class="col-md-4">    
               <figure class="box-set"><img src="figures\1com_cloud.png" alt="Cloud"></figure>    
-              <p class="text-right">Cloud Cover% (fig.C)</p>
+              <p class="text-right">Cloud Cover (fig.C)</p>
             </div>
             <div class="col-md-4">    
               <figure class="box-set "><img src="figures\1com_wind.png"  alt="wind"></figure>    
