--- a/Comp.html
+++ b/Comp.html
@@ -64,7 +64,7 @@
             </div>
             <div class="col-md-4">    
               <figure class="box-set"><img src="figures\1com_Temp.png" alt="temp"></figure>    
-              <p class="text-right">Temprature F  (fig.A)</p>
+              <p class="text-right">Temp. (fig.A)</p>
             </div>
             <div class="col-md-4">    
               <figure class="box-set "><img src="figures\1com_humid.png"  alt="Huidity"></figure>    
@@ -77,11 +77,11 @@
             </div>
             <div class="col-md-4">    
               <figure class="box-set"><img src="figures\1com_cloud.png" alt="Cloud"></figure>    
-              <p class="text-right">Cloud Cover (fig.C)</p>
+              <p class="text-right">Cloud (fig.C)</p>
             </div>
             <div class="col-md-4">    
               <figure class="box-set "><img src="figures\1com_wind.png"  alt="wind"></figure>    
-              <p class="text-right">Wind mph (fig.D)</p>
+              <p class="text-right">Wind (fig.D)</p>
             </div>
 
     </div>
