--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
             <h2>Does Latitude influnce weather?</h2>
                 <p>An experiment was conducted to determine the relationship between weather and latitude. An application employing Jupyter notebook was designed to extract weather information from random cities across the world at different latitudes.  Corresponding temperature, humidity, cloud cover, and windspeed data was collected from random cities over the course of several minutes. </p>
                 <div class="spacer"></div>
-                <p>Data was collected on 674 unique cities across the globe. 423 cities are in the Northern Hemisphere. 229 cities are in the Northern Hemisphere. 25 cities were located at or near the equator (between 1 and -1 latitude).
+                <p>Data was collected on 674 unique cities across the globe. 423 cities are in the northern hemisphere. 229 cities are in the southern hemisphere. 25 cities were located at or near the equator (between 1 and -1 latitude).
                   Data was collected on Nov 22, 2020.</p>
                 <div class="spacer"></div>
                 <div class="spacer"></div>
